<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tőzsdejáték</string>
    <string name="action_settings">Beállítások</string>
    <string name="btnConnect">Kapcsolódás</string>
    <string name="hintIP">Cím</string>
    <string name="hintPort">Port</string>
    <string name="hintName">Név</string>
    <string name="textTeam">Csapat</string>
    <string name="textStock">Részvény</string>
    <string name="textOfferSell">Részvény eladása</string>
    <string name="textOfferBuy">Részvény vásárlása</string>
    <string name="textOfferSend">Ajánlat küldése</string>
    <string name="could_not_connect">Nem sikerült a kapcsolódás :(</string>
    <string name="timeout">Időtúllépés</string>
    <string name="ok">OK</string>
    <string name="done">Kész!</string>
    <string name="money">Pénz</string>
    <string name="unit_price">Egységár</string>
    <string name="amount">Mennyiség</string>
    <string name="dont_have_enough_money">Nincs elég pénzed, hogy ennyi részvényt megvegyél</string>
    <string name="overview">Áttekintés</string>
    <string name="stocks">Részvények</string>
    <string name="offer">Ajánlat</string>
    <string name="outgoing">Kimenő</string>
    <string name="yes">Igen</string>
    <string name="no">Nem</string>
    <string name="connecting">Kapcsolódás</string>
    <string name="waiting_for_the_first_round">Várakozás az első körre</string>
    <string name="value_of_stocks">Részvények összértéke:</string>
    <string name="price_must_be_positive">Pozitív árat adj meg!</string>
    <string name="game_has_started">A játék már korábban elkezdődött :(</string>
    <string name="name_duplicate">Már van egy ilyen nevű játékos!</string>
    <string name="exit_question">Biztosan kilépsz?</string>
    <string name="exit_message">Később nem tudsz visszajönni!</string>
    <string name="offer_toast_buy1">Megvettél</string>
    <string name="offer_toast_buy2">Küldő</string>
    <string name="offer_toast_sell1">Eladtál</string>
    <string name="offer_toast_sell2">Fogadó</string>
    <string name="new_round">Új kör!</string>
    <string name="bad_number_format">Nem felismerhető a szám, amit beírtál!</string>
    <string name="new_offer">Új ajánlat érkezett!</string>
    <string name="stocks_for_sale">Eladó részvény</string>
    <string name="stocks_to_buy">Vételre kínált részvény</string>
    <string name="zeroth_round_bad_number_format">Hibás számformátum ennél a részvénynél: \'%s\'</string>
    <string name="zeroth_round_cannot_buy_as_many_stocks">Maximum %1$d részvényt tudsz venni ebből: \'%2$s\'</string>
    <string name="tabOffer_bad_number_format">Egy számot adj meg egységárként!</string>
    <string name="tabOffer_for_sale">Eladó</string>
    <string name="tabOffer_to_buy">Vétel</string>
    <string name="offer_stock_duplicate">Egy részvény – egy ajánlat</string>

    <!-- ActivityMain -->
    <string name="connection_lost">Megszakadt a kapcsolat :(</string>

    <!-- ActivityMain tabs -->
    <string name="main_tab_label_newsfeed">Hírfolyam</string>
    <string name="main_tab_label_stocks">Részvények</string>
    <string name="main_tab_label_exchange">Kereskedelem</string>
    <string name="main_tab_label_stats">Statisztika</string>
    <string name="main_tab_label_outgoing">Kimenő</string>
    <string name="main_tab_label_incoming">Bejövő</string>

    <!-- ActivityMain Stocks tab -->
    <string name="main_tab_stocks_currency_start">Árfolyam: %s$ (</string>
    <string name="main_tab_stocks_currency_end">)</string>
    <string name="main_tab_stocks_circulated">Forgalomban: %s db</string>
    <string name="main_tab_stocks_possessed">Saját részvényeim: %s db</string>

    <!-- ActivityMain Exchange/Outgoing, Incoming tab -->
    <string name="main_tab_exchange_offer_type_sell">Eladok</string>
    <string name="main_tab_exchange_offer_type_buy">Veszek</string>
    <string name="main_tab_exchange_offer_stock_name">Részvény: %s</string>
    <string name="main_tab_exchange_offer_price">Ár: %s$</string>
    <string name="main_tab_exchange_offer_amount">Mennyiség: %d db</string>
    <string name="main_tab_exchange_cancel_offer">Visszavonod az ajánlatot?</string>
    <string name="main_tab_exchange_accept_offer">Elfogadod az ajánlatot?</string>

    <!-- ActivityMain Exchange tab new offer -->
    <string name="main_tab_exchange_new_offer_stock_name">Részvény:</string>
    <string name="main_tab_exchange_new_offer_team_name">Csapatnév:</string>
    <string name="main_tab_exchange_new_offer_price">Ár:</string>
    <string name="main_tab_exchange_new_offer_amount">Mennyiség:</string>
    <string name="main_tab_exchange_new_offer_send">Küldés</string>
    <string name="not_enough_money_or_stock">Nincs elég pénz vagy részvény a csere végrehajtásához</string>
    <string name="sending_offer">Ajánlat küldése</string>

    <string-array name="main_tab_exchange_new_offer_type">
        <item>Veszek</item>
        <item>Eladok</item>
    </string-array>

    <!-- ActionBar -->
    <string name="action_bar_money">Pénz: %s$</string>
    <string name="action_bar_stocks_value">Részvények: %s$</string>
    <string name="hintPassword">Jelszó</string>
    <string name="toast_trade_sell_0">Eladtál </string>
    <string name="toast_trade_sell_1"> db </string>
    <string name="toast_trade_sell_2"> részvényt, darabját </string>
    <string name="toast_trade_sell_3">-ért.</string>
    <string name="toast_trade_buy_0">Vettél </string>
    <string name="toast_trade_buy_1"> db </string>
    <string name="toast_trade_buy_2"> részvényt, darabját </string>
    <string name="toast_trade_buy_3">-ért.</string>
    <string name="error_connection_refused">A kapcsolat megtagadva! Biztosan jól adtad meg a felhasználóneved és jelszavad?</string>

    <!-- StockBuyActivity -->
    <string name="waiting_for_response">Várakozás a visszaigazolásra</string>

</resources>