<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hu.berzsenyi.exchange.client.ActivityConnect" >
    
    <EditText
        android:id="@+id/connect_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/hintName"
        android:inputType="textCapWords" >

        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/connect_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_name"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPassword" />
    
    <EditText
        android:id="@+id/connect_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_password"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/hintIP"
        android:inputType="text|phone" />
    
    <EditText
        android:id="@+id/connect_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_ip"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/hintPort"
        android:inputType="number" />

    <Button
        android:id="@+id/connect_connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_port"
        android:layout_centerHorizontal="true"
        android:text="@string/btnConnect" />

</RelativeLayout>
