<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/cardView_margin_vertical"
        android:layout_marginLeft="@dimen/cardView_margin_horizontal"
        android:layout_marginRight="@dimen/cardView_margin_horizontal"
        android:layout_marginTop="@dimen/cardView_margin_vertical"
        app:cardCornerRadius="@dimen/cardView_corner_radius"
        app:cardElevation="@dimen/cardView_elevation" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/cardView_padding_vertical"
            android:paddingLeft="@dimen/cardView_padding_horizontal"
            android:paddingRight="@dimen/cardView_padding_horizontal"
            android:paddingTop="@dimen/cardView_padding_vertical" >

            <Spinner
                android:id="@+id/main_tab_exchange_new_offer_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/main_tab_exchange_new_offer_stock_name" />

                <Spinner
                    android:id="@+id/main_tab_exchange_new_offer_stock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/main_tab_exchange_new_offer_team_name" />

                <Spinner
                    android:id="@+id/main_tab_exchange_new_offer_team"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/main_tab_exchange_new_offer_price" />

                <EditText
                    android:id="@+id/main_tab_exchange_new_offer_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/main_tab_exchange_new_offer_amount" />

                <EditText
                    android:id="@+id/main_tab_exchange_new_offer_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number" />
            </LinearLayout>
            
            <Button
                android:id="@+id/main_tab_exchange_new_offer_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/main_tab_exchange_new_offer_send" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>