<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tabIncoming_offerType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tabIncoming_offerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tabIncoming_offerType"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tabIncoming_offerValue_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tabIncoming_offerName"
        android:text="@string/unit_price" />

    <TextView
        android:id="@+id/tabIncoming_offerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tabIncoming_offerValue_label"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/tabIncoming_offerValue_label"
        android:layout_toRightOf="@id/tabIncoming_offerValue_label"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tabIncoming_offerAmount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tabIncoming_offerValue_label"
        android:text="@string/amount" />

    <TextView
        android:id="@+id/tabIncoming_offerAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tabIncoming_offerAmount_label"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/tabIncoming_offerAmount_label"
        android:layout_toRightOf="@+id/tabIncoming_offerAmount_label" />

    <TextView
        android:id="@+id/tabIncoming_offerSender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tabIncoming_offerAmount_label"
        android:text="@string/textTeam" />

    <TextView
        android:id="@+id/tabIncoming_offerSender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tabIncoming_offerSender_label"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tabIncoming_offerSender_label"
        android:layout_toRightOf="@+id/tabIncoming_offerSender_label" />

</RelativeLayout>